<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_theme_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_major_choice" tools:context=".MajorChoiceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_heading"
        android:text="@string/choose_major"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin">
        <RadioButton android:id="@+id/cs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_science"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/cs_bio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cs_bio"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/comp_eng_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_engineering"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/cs_ba_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_science_ba"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

  <!--  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_heading"
        android:text="@string/choose_quarter"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18dp"/>
    <Spinner
        android:id="@+id/quarter_grad_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:spinnerMode="dropdown"
        android:entries="@array/grad_quarter"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_heading"
        android:text="@string/choose_college"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp"/>
    <Spinner
        android:id="@+id/college_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:spinnerMode="dropdown"
        android:entries="@array/college"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <Button android:id="@+id/buttonSubmitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="submitInfo"
        android:enabled="false"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp">

        <Button android:id="@+id/buttonToCourseListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_view"
            android:onClick="showCourseList"
            android:enabled="false"
            android:layout_weight="0.5"/>

        <Button android:id="@+id/buttonToFourYearPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fyp"
            android:onClick="showFourYearPlan"
            android:enabled="false"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <TextView android:id="@+id/message"
        android:text="Parsing goes:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:typeface="monospace"
        android:layout_gravity="center"
        android:visibility="invisible"
        />

</LinearLayout>
