<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_theme_bg">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_department"
            android:text="Department: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_code"
            android:text="Code: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_title"
            android:text="Title: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_description"
            android:textIsSelectable="true"
            android:text="Description: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_units"
            android:text="Units: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_detailed_text_prerequisites"
            android:text="Prerequisites: "
            android:textSize="15dp"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/course_detailed_button_completion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="courseSetCompleted"
            android:paddingTop="10dp"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/course_detailed_button_interested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="courseSetInterested"
            android:paddingTop="25dp"
            android:paddingLeft="10dp" />

        <Button android:id="@+id/button_cape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cape"
            android:onClick="showCape"
            android:layout_gravity="right"
            android:paddingTop="25dp" />
    </LinearLayout>
</ScrollView>