<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_text_department"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_item_text_code"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:id="@+id/list_item_text_title"
            android:layout_marginLeft="10dp"></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/list_item_text_id"
            android:visibility="invisible"
            android:textIsSelectable="false"></TextView>
    </LinearLayout>

</LinearLayout>